# libgpiod

./: meson.build  meson_options.txt
.github/workflows/: build_wheels.yml  test_python_bindings.yml
bindings/: meson.build
bindings/cxx/: meson.build
bindings/cxx/examples/: meson.build
bindings/glib/: meson.build
bindings/python/: MANIFEST.in  Makefile.am  generate_pypi_artifacts.sh  pyproject.toml  setup.py
bindings/python/_custom_build/: backend.py
bindings/python/gpiod/: chip.py  line_request.py  meson.build
bindings/python/gpiod/ext/: chip.c  internal.h  line-config.c  module.c  request.c
bindings/python/tests/: meson.build  tests_line_request.py  tests_threading.py
bindings/python/tests/gpiosim/: ext.c  meson.build
bindings/python/tests/system/: ext.c  meson.build
lib/: meson.build
